# py.humind

./: README.md  pyproject.toml
py/: add_age_cat.py  add_fcs.py  num_cat.py  value_to_sl.py
tests/: test_add_fcs.py
