[tool.poetry]
name = "py-humind"
version = "0.1.0"
description = ""
authors = ["gnoblet <gnoblet@zaclys.net>"]
readme = "README.md"
packages = [{include = "py"}]

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
